--- a/R/PC with R introduction multicore.Rmd
+++ b/R/PC with R introduction multicore.Rmd
@@ -2,27 +2,31 @@
 title: "PC for DS with R: Introduction"
 output: html_notebook
 ---
+Problem studied: average number of common outlinks in a graph given by adjacency matrix.
 
-Now it's time to introduce parallelism, using parallel/snow methods.
+Using multicore methods. This type of parallelism may be acheived in a single cluster. Doesn't use network sockets for communication.
 
 ```{r}
 library(parallel)
+library(microbenchmark)
 
 doinchunk <- function(start, chunks, lnks){
   tot <-0
   nr <- nrow(lnks)
-  for(i in (start:max(start-1 + chunks, length(lnks)))){
-    tmp <- lnks[(i+1):nr,] %*% lnks[i,]
+  for(i in (start:min(start-1 + chunks, nrow(lnks)-2))){
+    tmp <- lnks[(i+1):(nr-1),] %*% lnks[i,]
     tot <- tot+sum(tmp)
   }
+  tot
 }
 ```
-
+Two scheduling systems:
+1. Assign all jobs at the beggining by round robin
+2. Dynamically assign chunks of 5 jobs when worker returns previous result
 ```{r}
 mopPreschedule <- function(lnks, cores){
   nr <- nrow(lnks)
   tots <- mclapply(1:(nr-1), doinchunk, 1, lnks, mc.cores=cores, mc.preschedule = T)
-  tots
   Reduce(sum, tots)/nr
 }
 
@@ -37,11 +41,11 @@ mopDynamic <- function(lnks, cores, chunk){
 ```{r}
 compareChunks <- function(nr, times, chunk=10){
   lnks <- matrix(sample(0:1, nr**2, replace = TRUE), nrow=nr)
-  microbenchmark(mopDynamic(lnks, 4, chunk), unit="s", times=times)
+  microbenchmark(mopDynamic(lnks, 4, chunk), mopPreschedule(lnks, 4), unit="s", times=times)
 
 }
 # compare parallel and serial execution times
-compareChunks(100, 1)
-compareChunks(200, 5)
-compareChunks(400, 2)
+compareChunks(100, 20)
+compareChunks(200, 10)
+compareChunks(400, 5)
 ```
