--- a/R/Timing machine.Rmd
+++ b/R/Timing machine.Rmd
@@ -6,6 +6,7 @@ output: html_notebook
 ## Input generator
 ```{r}
 library(igraph)
+library(magrittr)
 # fits lognormal distribution to a graph and returns function generating vector[size] of samples from that distribution
 lognormSampler <- function(original) {
   require(fitdistrplus)
@@ -77,45 +78,45 @@ graphGenerator <- function(size, params) {
 ```{r}
 sizes <- seq(200, to = 5000, by = 200)
 sampler <- lognormSampler(n5)
-res <- runSizes(algoDistances, graphGenerator, sizes, 500, inputArgs = c(distrSampler = sampler), algArgs = c())
+res <- runSizes(algoDistances, graphGenerator, sizes, 50, inputArgs = c(distrSampler = sampler), algArgs = c())
 saveRDS(res, file="from200to5000.rds")
 ```
-
+Having gathered enough datapoints one can fit a linear model and asses visually how it matches the data:
 ```{r}
 plot(res$nodes, res$elapsed)
-library(corrplot)
-res$square <- (res$nodes)^2
-n <- res$nodes
-res$cube <- (res$nodes)^3
-res$log <- log(res$nodes)
-res$nlog <- res$nodes * res$log
-cor(res$elapsed, cbind(poly(n, 5), n * log(n)))
-cor(res$elapsed, n * log(n))
-# n <- 1:1000
-matplot(n, cbind(n, n * log(n), n^2))
+squarefit <- lm(elapsed ~ poly(nodes, 2), data = res)
+# plot(squarefit)
+{ plot(res$nodes, res$elapsed, col="red")
+  points(res$nodes, predict(squarefit, res), col="green")}
 ```
 
-Add a new chunk by clicking the *Insert Chunk* button on the toolbar or by pressing *Ctrl+Alt+I*.
-
-When you save the notebook, an HTML file containing the code and output will be saved alongside it (click the *Preview* button or press *Ctrl+Shift+K* to preview the HTML file).
-
-The preview shows you a rendered HTML copy of the contents of the editor. Consequently, unlike *Knit*, *Preview* does not run any R code chunks. Instead, the output of the chunk when it was last run in the editor is displayed.
+And also inspect parameters of the model and measures of uncertainity:
 ```{r}
-nlfit <- lm(elapsed ~ nlog, data = res)
-print(nlfit)
-r <- seq(200, to = 5000, by = 100)
-{predict(nlfit, data.frame("nlog" = r * log(r))) %>% plot(r, .)
-  lines(res$nodes, res$elapsed)
-}
+summary(squarefit)
 ```
+Note that in order to protect the model from correlation between powers of `nodes`, orthogonal polynomials are used instead. The `poly` function returns uncorrelated and normalised columns corresponding to consecutive powers of it's first argument.
+
+As the model seems to fit our observations, we may try to extrapolate execution time of the same algorithm with a bigger input size:
+```{r}
+bigsizes <- c(6000, 8000, 10000, 12000)
+bigres <- runSizes(algoDistances, graphGenerator, bigsizes, 150, inputArgs = c(distrSampler = sampler), algArgs = c())
+```
+
+```{r}
+total <- rbind(res, bigres)
+pred <- predict(squarefit, newdata = total)
+{ plot(total$nodes, total$elapsed, col="red")
+  points(total$nodes, pred, col="green")}
+```
+It comes out the prediction is a bit undershot but catches nonlinear behaviour of the data.
 ```{r}
 res$pol1 <- poly(res$nodes, 2)[, 1]
 res$pol2 <- poly(res$nodes, 2)[, 2]
 
 squarefit <- lm(elapsed ~ pol1 + pol2, data = res)
 r <- seq(200, to = 10000, by = 200)
-r <- res$nodes
-p <- predict(squarefit, data.frame("pol1" = poly(r, 2)[, 1], "pol2" = poly(r, 2)[, 2]))
+r <- data.frame(nodes = res$nodes)
+p <- predict(squarefit, ]))
 {plot(res$nodes, res$elapsed, col="red")
   points(r, p, col="green")}
 ```
