Trying to keep density

--- a/R/Random_graph_generation.Rmd
+++ b/R/Random_graph_generation.Rmd
@@ -17,15 +17,18 @@ rm(data) # remove name from workspace to reduce clutter
 And calculate some descriptive statistics:
 ```{r}
 n5$in_deg <- degree(n5, mode = "in")  # in-degrees
-    n5$out_deg <- degree(n5, mode = "out")
+n5$out_deg <- degree(n5, mode = "out")
 n5$v <- gorder(n5)  # number of vertices
 n5$e <- gsize(n5)  # number of edges
+
+#experimental:
+n5$in_deg <- n5$in_deg/n5$v
 ```
 In degree ploted in red, out degree in green:
 
 ```{r}
 {
-plot(table(n5$in_deg), type = "p", col=2, ylab = "occurences", xlab = "degree")
+plot(table(n5$in_deg), type = "p", col="red", ylab = "occurences", xlab = "degree")
 points(table(n5$out_deg), type = "p", col=3)
 }
 ```
@@ -36,7 +39,7 @@ library(fitdistrplus)
 ```
 The Q-Q plot shows our data is heavy-tailed. Another guesss is log-normal distribution:
 ```{r}
-in_lnorm_fit <- fitdist(n5$in_deg + 1, "lnorm")
+in_lnorm_fit <- fitdist((n5$in_deg + 1)/n5$v, "lnorm")
 plot(in_lnorm_fit)
 ```
 Nearly perfect! What about `n5$out_degree`?
