--- a/R/Random_graph_generation.Rmd
+++ b/R/Random_graph_generation.Rmd
@@ -9,7 +9,7 @@ First, let's import one of the POETS graphs:
 library(igraph)
 library(magrittr) # pipe operator
 setwd("~/Code/Warwick/BSP/R/")
-data <- read.table("./asp/Networks/nodes10000.edges", sep=" ", skip=2)
+data <- read.table("./asp/Networks/n5.edges", sep=" ", skip=2)
 n5 <- graph_from_data_frame(d = data, directed=T)
 rm(data) # remove name from workspace to reduce clutter
 ```
@@ -30,19 +30,37 @@ points(table(n5$out_deg), type = "p", col=3)
 ```
 The Q-Q plot shows our data is heavy-tailed. Another guesss is log-normal distribution. As some shift is required to avoid log(0), we use distribution with additional degree of freedom:
 ```{r}
+lnorm3 <- function(samples) {
+  require(fitdistrplus)
+  require(EnvStats)
+  require(stats)
+  init_vals <- fitdist(samples + 1, "lnorm")$estimate
+  
+  
+}
+
 library(fitdistrplus)
 library(EnvStats)
 
-in_lnorm_fit <- fitdist(n5$in_deg, "lnorm3", start = c(meanlog=1, sdlog=0.1, threshold=0))
+init_vals <- fitdist(n5$in_deg + 1, "lnorm")$estimate # use lognormal fit to obtain reasonable start conditions
+in_lnorm_fit <- fitdist(n5$in_deg + 1, "lnorm3", start = c(init_vals, threshold=0))
 plot(in_lnorm_fit)
 in_lnorm_fit
+shifted <- in_lnorm_fit$estimate
+shifted["threshold"]  <- shifted["threshold"] - 1
+qqplot(rlnorm3(10000, in_lnorm_fit$estimate) %>% round, rlnorm3(10000, shifted) %>% round)
 ```
-Nearly perfect! What about `n5$out_degree`?
+Nearly perfect, tail is a bit fussy! What about `n5$out_degree`?
 ```{r}
-fit_lnorm_out <- fitdist(n5$out_deg, "lnorm3", start = c(meanlog=3, sdlog=0.1, threshold=-10))
+fit_lnorm_out <- fitdist(n5$out_deg, "lnorm3", start = c(meanlog=0, sdlog=5, threshold=10))
 plot(fit_lnorm_out)
 ```
 Guessing start values for the recursive fitting algorithm used behind the scenes requires a bit of trial and error but the final fit looks really accurate.
+
+```{r}
+fit_lnorm_out <- fitdist(degree(n5), "lnorm3", start = c(meanlog=3, sdlog=0.1, threshold=-10))
+plot(fit_lnorm_out)
+```
 
 Is there any correlation between in and out degree:
 ```{r}
@@ -53,7 +71,7 @@ cor.test(degree(n5, mode = "in"), degree(n5, mode = "out"))
 ## Generate random graphs
 We have enough information to generate a random graph with similar characteristics:
 ```{r}
-fit <- fitdist(degree(n5) + 1, "lnorm")
+fit <- fitdist(degree(n5), "lnorm3", )
 new_degs <- rlnorm(n5$v, mean = fit$estimate["meanlog"],
                          sd = fit$estimate["sdlog"]) %>% round
 new_degs[new_degs > n5$v] <- n5$v # trim meaningless values
@@ -69,23 +87,30 @@ fitdist(degree(g5) + 1, "lnorm") %>% plot
 ```{r}
 scaledRandomGraph <- function(original, new_v){
   require(fitdistrplus)
-  fit <- fitdist(degree(original) + 1, "lnorm")
-    new_degs <- rlnorm(new_v,
+  require(EnvStats)
+  fit <- fitdist(degree(original), "lnorm3", start = c(meanlog=3, sdlog=0.1, threshold=-10))
+    new_degs <- rlnorm3(new_v,
                      mean = fit$estimate["meanlog"],
-                     sd = fit$estimate["sdlog"]) %>% round
+                     sd = fit$estimate["sdlog"], threshold = fit$estimate["threshold"]) %>% round
   new_degs[new_degs > new_v] <- new_v # trim meaningless values
   if(sum(new_degs) %% 2 != 0){ new_degs[1] <- new_degs[1] + 1} # undirected graph must have even sum of orders
   g5 <- sample_degseq(out.deg = new_degs) %>%
     as.directed(mode = "arbitrary") %>%  # generated undirected graph! Fix?
     simplify(remove.loops = T)  # remove edges with from=to
 }
-
-g1 <- scaledRandomGraph(n5, gsize(n5))
-# plot(g1, layout = layout_in_circle)
 ```
 
 ```{r}
-plot(degree(g5, mode = "in"), degree(n5, mode = "out"), type = "p")
-cor.test(degree(g5, mode = "in"), degree(g5, mode = "out"))
+g1 <- scaledRandomGraph(n5, gsize(n5))
+summary(g1)
 ```
+
+```{r}
+{
+plot(table(n5$in_deg), type = "p", col="red", ylab = "occurences", xlab = "degree")
+p(table(degree(g5)), type = "p", col=3)
+}
+# plot(g1, layout = layout_in_circle)
+```
+
 
