--- a/R/Random_graph_generation.Rmd
+++ b/R/Random_graph_generation.Rmd
@@ -8,6 +8,7 @@ First, let's import one of the POETS graphs:
 ```{r}
 library(igraph)
 library(magrittr) # pipe operator
+# library(package)
 setwd("~/Code/Warwick/BSP/R/")
 data <- read.table("./asp/Networks/n5.edges", sep=" ", skip=2)
 n5 <- graph_from_data_frame(d = data, directed=T)
@@ -30,13 +31,9 @@ points(table(n5$out_deg), type = "p", col=3)
 ```
 The Q-Q plot shows our data is heavy-tailed. Another guesss is log-normal distribution. As some shift is required to avoid log(0), we use distribution with additional degree of freedom:
 ```{r}
-lnorm3_autofit <- function(samples) {
-  require(fitdistrplus); require(EnvStats); require(stats)
-  init_vals <- fitdist(samples + 1, "lnorm")$estimate
-  lnorm_fit <- fitdist(samples + 1, "lnorm3", start = c(init_vals, threshold=0))
-  lnorm_fit$estimate["threshold"] <- lnorm_fit$estimate["threshold"] - 1
-  lnorm_fit
-}
+library(bspFunctions)
+lnorm_fit <- lnorm3_autofit(degree(n5))
+lnorm_fit$distname
 ```
 
 ```{r}
