--- a/src/papers/Random_graph_generation.Rmd
+++ b/src/papers/Random_graph_generation.Rmd
@@ -1,19 +1,18 @@
 ---
-title: "Analysis of the POETS graphs"
+title: "Analysis of POETS graph"
 output: html_notebook
 ---
 
 ### Analysing existing dataset
 First, let's import one of the POETS graphs:
-```{r}
+```{r echo=TRUE, message=FALSE, warning=FALSE}
 library(igraph)
 library(magrittr) # pipe operator
-# library(devtools)
-# document(pkg = "./bspLib/")
+library(devtools)
+document(pkg = "./src/bspLib/")
 library(bspLib) # my library
-# library(package)
-setwd("~/Code/Warwick/BSP/R/")
-data <- read.table("./asp/Networks/nodes4000.edges", sep=" ", skip=2)
+
+data <- read.table(file = "external/asp/Networks/n5.edges", sep=" ", skip=2)
 n5 <- graph_from_data_frame(d = data, directed=T)
 rm(data) # remove name from workspace to reduce clutter
 ```
